--- a/FrontEnd/landing_page/index.html
+++ b/FrontEnd/landing_page/index.html
@@ -9,7 +9,7 @@
     <title>FII Admis</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="../static/style/bootstrap.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="css/style.css" rel="stylesheet">
@@ -27,7 +27,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#top"><img src="./images/logo.png" alt="FII Admis logo"></a>
+                <a class="navbar-brand" href="#top"><img src="../static/images/logo.png" alt="FII Admis logo"></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -92,7 +92,7 @@
                 <div class="col-md-2"></div>
                 <div class="col-md-3">
                     <div class="device-container" id="padded">
-                        <img src="./images/success.png" alt="Success">
+                        <img src="../static/images/success.png" alt="Success">
                     </div>
                 </div>
             </div>
@@ -124,7 +124,7 @@
     <section id="contact" class="contact">
         <div class="container">
             <div class="col-md-6">
-                <img src="./images/fii.jpg" class="contactImg" alt="FII">
+                <img src="../static/images/fii.jpg" class="contactImg" alt="FII">
             </div>
             <div class="col-md-6">
                     <div class="detalii">
@@ -141,9 +141,9 @@
 
                         <!-- Social -->
                         <div class="social">
-                        <a href="https://www.facebook.com/FacultateaDeInformaticaUAICIasi"><img src="./images/facebook.png" alt="Facebook"></a>
-                        <a href="https://twitter.com/uaiciasi"><img src="./images/twitter.png" alt="Twitter"></a>
-                        <a href="https://www.linkedin.com/grps/Facultatea-de-Informatica-Iasi-91904"><img src="./images/linkedin.png" alt="LinkedIn"></a>
+                        <a href="https://www.facebook.com/FacultateaDeInformaticaUAICIasi"><img src="../static/images/facebook.png" alt="Facebook"></a>
+                        <a href="https://twitter.com/uaiciasi"><img src="../static/images/twitter.png" alt="Twitter"></a>
+                        <a href="https://www.linkedin.com/grps/Facultatea-de-Informatica-Iasi-91904"><img src="../static/images/linkedin.png" alt="LinkedIn"></a>
                         </div>
                     </div>
                 </div>
@@ -159,10 +159,10 @@
 
 <!-- Scripts -->
     <!-- jQuery -->
-    <script type="text/javascript" src="js/jquery.js"></script>
+    <script type="text/javascript" src="../static/js/jquery.js"></script>
     <!-- Bootstrap Core JavaScript -->
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="../static/js/bootstrap.min.js"></script>
     <!-- Smooth scrolling JavaScript -->
-    <script type="text/javascript" src="js/smooth.js"></script>
+    <script type="text/javascript" src="../static/js/smooth.js"></script>
 </body>
 </html>
